--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ __pypackages__/
 *.egg-info/
 *.ipynb
 *.log*
+!client/td-sdk/tests/testing_resources/**/*.log
 MANIFEST
 !assets/manifest
 !variant/assets/manifest
