[TD-14] Force UTF-8 encoding when printing to console from Python (#13)

--- a/.github/workflows/integration-standard-linux-x86-64.yml
+++ b/.github/workflows/integration-standard-linux-x86-64.yml
@@ -46,6 +46,7 @@ jobs:
       python-version: "3.12"
       MARKERS: "not oracle"
       PYTEST_MAXIMUM_RETRY_COUNT: 36
+      PYTHONIOENCODING: "utf-8"
 
     steps:
       - name: Configure git symlinks
