--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -3,6 +3,7 @@
 #
 
 [pytest]
+
 markers =
     chipset: test that might give false positives or negatives due to chipset behaviour (specially on numbers precision).
     integration: mark a test as a integration test.
@@ -13,3 +14,8 @@ markers =
     requires_internet: mark those tests that require an Internet connection to be run.
     slow: mark test as slow.
     tableframe: mark a test that validates the TableFrame API.
+
+addopts = --tb=short
+
+# Use this one for better troubleshooting in integration or release builds.
+# addopts = --tb=short --capture=tee-sys -s --log-cli-level=DEBUG
