[TD-19] Global instance settings with automatic hot reload (#19)
Common utility to manage settings shared by all componets in instance.

Settings are seeked following this strategy:

- TD_\<KEY> environment variable
- TD__\<INSTANCE>_\<KEY> environment variable
- Entry \<key> in file settings.yaml in instance folder.
- Entry \<key> in default bundled file settings.yaml.

If a file named settings_\<instance>.yaml is found in .tabsdata folder, it will be moved to the instance folder when first loading settings, renaming it to expected file settings.yaml.

This component supports hot reload for all the possible sources of values as described above.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -377,6 +377,9 @@ version = "0.5.0"
 version = "0.44.2"
 features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write"]
 
+[workspace.dependencies.rand]
+version = "0.9.0"
+
 [workspace.dependencies.ratatui]
 version = "0.28.1"
 
