--- a/server/libraries/td-common/Cargo.toml
+++ b/server/libraries/td-common/Cargo.toml
@@ -76,6 +76,7 @@ once_cell = { workspace = true }
 opentelemetry_sdk = { workspace = true }
 opentelemetry-stdout = { workspace = true }
 pico-args = { workspace = true }
+rand = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
@@ -83,6 +84,7 @@ serde_yaml = { workspace = true }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 sysinfo = { workspace = true }
+tempfile = { workspace = true }
 testdir = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
