[TD-30] Align project's Rust version & GitHub Actions's Rust toolchain version (#27)

--- a/.github/workflows/release-standard-macos-x86-64.yml
+++ b/.github/workflows/release-standard-macos-x86-64.yml
@@ -30,7 +30,7 @@ jobs:
         working-directory: .
 
     env:
-      rust-channel: stable
+      rust-channel: 1.84.1
       rust-target: x86_64-apple-darwin
       rust-toolchain: stable-x86_64-apple-darwin
       td-channel: stable
