--- a/.github/workflows/release-standard-linux-x86-64.yml
+++ b/.github/workflows/release-standard-linux-x86-64.yml
@@ -30,7 +30,7 @@ jobs:
         working-directory: .
 
     env:
-      rust-channel: stable
+      rust-channel: 1.84.1
       rust-target: x86_64-unknown-linux-gnu
       rust-toolchain: stable-x86_64-unknown-linux-gnu
       td-channel: stable
