--- a/.github/workflows/release-standard-windows-arm-64.yml
+++ b/.github/workflows/release-standard-windows-arm-64.yml
@@ -30,7 +30,7 @@ jobs:
         working-directory: .
 
     env:
-      rust-channel: stable
+      rust-channel: 1.84.1
       rust-target: aarch64-pc-windows-msvc
       rust-toolchain: stable-aarch64-pc-windows-msvc
       td-channel: stable
