--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -110,6 +110,7 @@ td-execution = { workspace = true }
 td-interceptor = { workspace = true }
 td-interceptor-api = { workspace = true }
 td-objects = { workspace = true }
+td-python = { workspace = true }
 td-security = { workspace = true }
 td-storage = { workspace = true }
 td-tower = { workspace = true }
