--- a/macros/facets/td-type/Cargo.toml
+++ b/macros/facets/td-type/Cargo.toml
@@ -5,7 +5,7 @@
 [package]
 description = "Tabsdata Typing Utilities Macro"
 edition = { workspace = true }
-name = "td-typing"
+name = "td-type"
 publish = false
 rust-version = { workspace = true }
 version = { workspace = true }
@@ -16,7 +16,7 @@ authors = { workspace = true }
 proc-macro = true
 
 [package.metadata.cargo-machete]
-ignored = ["openssl"]
+ignored = ["openssl", "utoipa"]
 
 [features]
 
@@ -27,10 +27,20 @@ dummy = []
 
 # Internal dependencies
 
+td-apiforge = { workspace = true }
+
 # External dependencies
 
+chrono = { workspace = true, features = ["serde"] }
+darling = { workspace = true }
+derive_builder = { workspace = true }
+getset = { workspace = true }
 quote = { workspace = true }
+proc-macro2 = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
 syn = { workspace = true, features = ["full"] }
+utoipa = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
