--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -43,7 +43,7 @@ ignored = ["openssl", "strum_macros", "td-build", "td-schema", "thiserror", "tom
 
 td-apiforge = { workspace = true }
 td-error = { workspace = true }
-td-typing = { workspace = true }
+td-type = { workspace = true }
 
 ## Libraries
 
