--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -94,6 +94,10 @@ version = "0.9.3"
 path = "facets/td-concrete"
 version = "0.9.3"
 
+[workspace.dependencies.td-error]
+path = "facets/td-error"
+version = "0.9.2"
+
 [workspace.dependencies.td-shared]
 path = "helpers/td-shared"
 version = "0.9.3"
@@ -124,6 +128,9 @@ version = "0.5.0"
 [workspace.dependencies.http]
 version = "1.2.0"
 
+[workspace.dependencies.lazy_static]
+version = "1.5.0"
+
 [workspace.dependencies.openssl]
 version = "0.10.70"
 features = ["vendored"]
@@ -140,6 +147,9 @@ version = "1.0.93"
 [workspace.dependencies.quote]
 version = "1.0.38"
 
+[workspace.dependencies.regex]
+version = "1.11.1"
+
 [workspace.dependencies.serde]
 version = "1.0.217"
 features = ["derive"]
@@ -151,9 +161,18 @@ version = "1.0.138"
 version = "0.8.3"
 features = ["sqlite", "runtime-tokio", "macros", "chrono"]
 
+[workspace.dependencies.strum]
+version = "0.27.1"
+
+[workspace.dependencies.strum_macros]
+version = "0.27.1"
+
 [workspace.dependencies.syn]
 version = "2.0.98"
 features = ["full"]
+
+[workspace.dependencies.thiserror]
+version = "2.0.11"
 
 [workspace.dependencies.utoipa]
 version = "5.3.1"
