--- a/macros/helpers/td-shared/Cargo.toml
+++ b/macros/helpers/td-shared/Cargo.toml
@@ -32,6 +32,7 @@ darling = { workspace = true }
 duct = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
+syn = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
