--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -173,7 +173,7 @@ tower-http = { workspace = true, features = ["cors", "timeout", "trace"] }
 tower-service = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
-utoipa = { workspace = true, features = ["axum_extras", "preserve_order"] }
+utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
 utoipa-swagger-ui = { workspace = true, features = ["axum", "reqwest"] }
 walkdir = { workspace = true }
 wildmatch = { workspace = true }
