[TD-33] Sqlx encoding/decoding for typed basic types (#31)
[TD-33] Sqlx encoding/decoding for typed basic types

  * Adding Sqlx type-info, encoder/decoder to the generated
    typed basic types so they can bind and do FromRow 
    directly.


[TD-33]: https://tabsdata.atlassian.net/browse/TD-33?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/libraries/td-common/Cargo.toml
+++ b/server/libraries/td-common/Cargo.toml
@@ -27,7 +27,7 @@ test-utils = []
 tokio_console = ["console-subscriber"]
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "td-build", "td-common", "toml"]
+ignored = ["openssl", "td-build", "td-common", "toml", "td-apiforge", "utoipa"]
 
 # Build dependencies
 
@@ -47,7 +47,9 @@ toml = { workspace = true }
 
 ## Macros
 
+td-apiforge = { workspace = true }
 td-error = { workspace = true }
+td-type = { workspace = true }
 
 # External dependencies
 
@@ -81,6 +83,7 @@ regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
+sqlx = { workspace = true, features = ["sqlite", "macros"] }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 sysinfo = { workspace = true }
@@ -92,6 +95,7 @@ tower = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true, features = ["serde"] }
+utoipa = { workspace = true, features = ["uuid"] }
 uuid = { workspace = true }
 whoami = { workspace = true }
 windows = { workspace = true, features = ["Win32", "Win32_System_Threading"] }
