--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -25,7 +25,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "td-schema", "thiserror", "toml"]
+ignored = ["openssl", "strum_macros", "td-build", "td-schema", "thiserror", "toml", "regex", "lazy_static"]
 
 # Build dependencies
 
