--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -98,9 +98,10 @@ toml = { workspace = true }
 ## Macros
 
 td-attach = { workspace = true }
+td-apiforge = { workspace = true }
 td-concrete = { workspace = true }
 td-error = { workspace = true }
-td-apiforge = { workspace = true }
+tm-workspace = { workspace = true }
 
 ## Libraries
 
