[TD-24] Implement Hashicorp secrets (#26)

--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -6,6 +6,7 @@
 
 markers =
     chipset: test that might give false positives or negatives due to chipset behaviour (specially on numbers precision).
+    hashicorp: mark test as requiring a hashicorp vault docker container.
     integration: mark a test as a integration test.
     mariadb: mark test as requiring a mariadb docker container.
     mysql: mark test as requiring a mysql docker container.
