--- a/devutils/automation/tasks/cargo/td-build/Cargo.toml
+++ b/devutils/automation/tasks/cargo/td-build/Cargo.toml
@@ -5,22 +5,16 @@
 [package]
 description = "Tabsdata Build Library"
 name = "td-build"
-publish = false
-edition = "2021"
-homepage = "https://www.tabsdata.com"
-license = ""
-readme = "README.md"
-repository = "https://github.com/tabsdata/tabsdata"
+
+authors = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
+publish = { workspace = true }
+readme = { workspace = true }
+repository = { workspace = true }
 rust-version = { workspace = true }
-version = "0.9.3"
-authors = [
-    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
-    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
-    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
-    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
-    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
-    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
-]
+version = { workspace = true }
 
 [lib]
 
@@ -37,6 +31,8 @@ test-utils = []
 [dependencies]
 
 # Internal dependencies
+
+tm-workspace = { workspace = true }
 
 # External dependencies
 
