--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -5,31 +5,10 @@
 [package]
 description = "Tabsdata Macros"
 name = "td-macros"
-publish = false
 edition = "2021"
-homepage = "https://www.tabsdata.com"
-license = ""
-readme = "../README.md"
-repository = "https://github.com/tabsdata/tabsdata"
-rust-version = "1.85.0"
-version = "0.9.3"
-authors = [
-    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
-    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
-    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
-    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
-    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
-    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
-]
+build = "build.rs"
 
 [workspace.package]
-edition = "2021"
-homepage = "https://www.tabsdata.com"
-license = ""
-readme = "../README.md"
-repository = "https://github.com/tabsdata/tabsdata"
-rust-version = "1.85.0"
-version = "0.9.3"
 authors = [
     "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
     "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
@@ -38,6 +17,14 @@ authors = [
     "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
     "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
 ]
+edition = "2021"
+homepage = "https://www.tabsdata.com"
+license = ""
+publish = false
+readme = "../README.md"
+repository = "https://github.com/tabsdata/tabsdata"
+rust-version = "1.85.0"
+version = "0.9.3"
 
 [workspace]
 members = [
@@ -85,23 +72,18 @@ dummy = []
 
 [workspace.dependencies.td-build]
 path = "../devutils/automation/tasks/cargo/td-build"
-version = "0.9.3"
 
 [workspace.dependencies.td-apiforge]
 path = "facets/td-apiforge"
-version = "0.9.3"
 
 [workspace.dependencies.td-concrete]
 path = "facets/td-concrete"
-version = "0.9.3"
 
 [workspace.dependencies.td-error]
 path = "facets/td-error"
-version = "0.9.2"
 
 [workspace.dependencies.td-shared]
 path = "helpers/td-shared"
-version = "0.9.3"
 
 # External dependencies
 
