--- a/macros/facets/tm-workspace/Cargo.toml
+++ b/macros/facets/tm-workspace/Cargo.toml
@@ -4,13 +4,17 @@
 
 [package]
 description = "Tabsdata to Instrospect Workspace Metadata"
-edition = { workspace = true }
 name = "tm-workspace"
-publish = false
+
+authors = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
+publish = { workspace = true }
+readme = { workspace = true }
+repository = { workspace = true }
 rust-version = { workspace = true }
 version = { workspace = true }
-license = { workspace = true }
-authors = { workspace = true }
 
 [lib]
 proc-macro = true
