--- a/server/libraries/td-python/Cargo.toml
+++ b/server/libraries/td-python/Cargo.toml
@@ -4,13 +4,17 @@
 
 [package]
 description = "Tabsdata Python Enablement Components"
-edition = { workspace = true }
 name = "td-python"
-publish = false
+
+authors = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
+publish = { workspace = true }
+readme = { workspace = true }
+repository = { workspace = true }
 rust-version = { workspace = true }
 version = { workspace = true }
-license = { workspace = true }
-authors = { workspace = true }
 
 [lib]
 
