--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -23,5 +23,6 @@ ignore = [
     "RUSTSEC-2024-0379",
     "RUSTSEC-2024-0399",
     "RUSTSEC-2024-0402",
+    "RUSTSEC-2024-0436",
     "RUSTSEC-2025-0003"
 ]
