--- a/.cargo/deny.toml
+++ b/.cargo/deny.toml
@@ -21,6 +21,7 @@ ignore = [
     "RUSTSEC-2024-0379",
     "RUSTSEC-2024-0399",
     "RUSTSEC-2024-0402",
+    "RUSTSEC-2024-0436",
     "RUSTSEC-2025-0003"
 ]
 
