--- a/.cargo/deny.toml
+++ b/.cargo/deny.toml
@@ -22,7 +22,8 @@ ignore = [
     "RUSTSEC-2024-0399",
     "RUSTSEC-2024-0402",
     "RUSTSEC-2024-0436",
-    "RUSTSEC-2025-0003"
+    "RUSTSEC-2025-0003",
+    "RUSTSEC-2025-0014"
 ]
 
 [bans]
