--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -1,3 +1,3 @@
-tabsdata-os/assets/manifest/VERSION
-tabsdata-os/client/td-sdk/tabsdata/assets/manifest/RELEASE-NOTES
-tabsdata-os/variant/assets/manifest/RELEASE-NOTES
+assets/manifest/VERSION
+client/td-sdk/tabsdata/assets/manifest/RELEASE-NOTES
+variant/assets/manifest/RELEASE-NOTES
