--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ cloudpickle==3.1.1
 connectorx==0.4.2
 filelock==3.17.0
 hvac==2.3.0
+humanize==4.12.1
 importlib_metadata==8.6.1
 numpy==2.2.3
+packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 polars==1.23.0
