[TD-56] Support for tabsdata-ee backbone descriptor (#68)

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,7 @@ share/python-wheels/
 site
 tests/bundle*
 target/
+variant/assets/manifest/SOURCETRACK.yaml
 variant/assets/manifest/THIRD-PARTY
 var/
 venv.bak/
