--- a/Cargo.toml
+++ b/Cargo.toml
@@ -364,6 +364,9 @@ version = "1.11.1"
 [workspace.dependencies.reqwest]
 version = "0.12.12"
 
+[workspace.dependencies.semver]
+version = "1.0.26"
+
 [workspace.dependencies.sha2]
 version = "0.10.8"
 
