--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,6 +14,7 @@ csvkit==2.0.1
 cx_Oracle==8.3.0
 docker==7.1.0
 flake8==7.1.2
+GitPython==3.1.44
 isort==6.0.1
 liccheck==0.9.2
 licensecheck==2024.3
