--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 __pycache__/
 __pypackages__/
 .cache
+.cache/
 .coverage
 .coverage.*
 .dmypy.json
@@ -32,11 +33,13 @@ __pypackages__/
 .spyderproject
 .spyproject
 .tabsdata/
+.temp/
 .td/
 .tox/
 .venv/
 .vs/
 .vscode/
+!.vscode/extensions.json
 .webassets-cache
 *_context
 *.cover
@@ -44,6 +47,12 @@ __pypackages__/
 *.egg-info/
 *.ipynb
 *.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+*.local
 !client/td-sdk/tests/testing_resources/**/*.log
 MANIFEST
 !assets/manifest
@@ -51,15 +60,21 @@ MANIFEST
 *.manifest
 !.manifest
 *.mo
+*.njsproj
+*.ntvs*
 *.pdb
 *.pot
 *.py,cover
 *.py[cod]
 *.sage.py
+*.sln
 *.so
+*.suo
 *.spec
+*.sw?
 **/*.rs.bk
 *$py.class
+build/
 **/build/
 !.github/**/build/
 **/Cargo.lock
@@ -73,6 +88,7 @@ db.sqlite3
 db.sqlite3-journal
 develop-eggs/
 dist/
+dist-ssr
 dmypy.json
 docs/_build/
 downloads/
@@ -84,8 +100,11 @@ htmlcov/
 instance/
 ipython_config.py
 lib64/
+licenses.json
 local_dev/
 local_settings.py
+logs/
+node_modules/
 nosetests.xml
 parts/
 pip-delete-this-directory.txt
@@ -96,8 +115,15 @@ profile_default/
 sdist/
 share/python-wheels/
 site
+/src/e2e/test-results/
+/src/e2e/playwright-report/
+/src/e2e/blob-report/
+/src/e2e/playwright/.cache/
+src/tests/coverage/
+storybook-static/
 tests/bundle*
 target/
+Thumbs.db
 variant/assets/manifest/SOURCETRACK.yaml
 variant/assets/manifest/THIRD-PARTY
 var/
