[TD-34] functions/tables/dependencies/triggers versioning refactoring DDL/DAO/DTO/queries (#32)
[TD-34] functions/tables/dependencies/triggers versioning refactoring DDL/DAO/DTO/queries

  * normalized current & versioned SQL schema for functions/tables/depedencies/triggers
  * current & version query builders for functions/tables/depedencies/triggers
  * initial set of typed basic types and DAO and DTO for functions/tables/depedencies/triggers



[TD-34]: https://tabsdata.atlassian.net/browse/TD-34?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -68,7 +68,9 @@ derive_builder = { workspace = true }
 futures-util = { workspace = true }
 getset = { workspace = true }
 itertools = { workspace = true }
+lazy_static = { workspace = true }
 polars = { workspace = true }
+regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_valid = { workspace = true }
@@ -77,6 +79,7 @@ strum_macros = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
+tracing = { workspace = true }
 
 [dev-dependencies]
 td-database = { workspace = true, features = ["td-test"] }
