--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -154,6 +154,9 @@ version = "0.27.1"
 version = "2.0.98"
 features = ["full"]
 
+[workspace.dependencies.tokio]
+version = "1.43.0"
+
 [workspace.dependencies.thiserror]
 version = "2.0.11"
 
