--- a/macros/facets/td-type/Cargo.toml
+++ b/macros/facets/td-type/Cargo.toml
@@ -53,6 +53,7 @@ strum = { workspace = true }
 strum_macros = { workspace = true }
 syn = { workspace = true, features = ["full"] }
 thiserror = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
 utoipa = { workspace = true, features = ["uuid"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
