[TD-63] Default User and Role IDs (#46)

--- a/server/libraries/td-common/Cargo.toml
+++ b/server/libraries/td-common/Cargo.toml
@@ -50,6 +50,7 @@ toml = { workspace = true }
 # Internal dependencies
 
 td-error = { workspace = true }
+td-security = { workspace = true }
 
 ## Macros
 
