--- a/server/libraries/td-database/Cargo.toml
+++ b/server/libraries/td-database/Cargo.toml
@@ -50,6 +50,7 @@ ignored = ["openssl", "strum_macros", "td-build", "td-database", "thiserror", "t
 td-error = { workspace = true }
 td-common = { workspace = true }
 td-schema = { workspace = true }
+td-security = { workspace = true }
 
 # External dependencies
 
@@ -68,6 +69,7 @@ tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 
 [dev-dependencies]
+td-database = { workspace = true, features = ["td-test"] }
 td-schema = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
