--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -69,6 +69,7 @@ futures-util = { workspace = true }
 getset = { workspace = true }
 itertools = { workspace = true }
 lazy_static = { workspace = true }
+paste = { workspace = true }
 polars = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
