--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -25,7 +25,7 @@ test_tower_metadata = ["td-tower/test_tower_metadata"]
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "td-schema", "thiserror", "toml", "regex", "lazy_static"]
+ignored = ["openssl", "tower"]
 
 # Build dependencies
 
@@ -45,12 +45,15 @@ td-error = { workspace = true }
 
 ## Libraries
 
+td-database = { workspace = true }
 td-objects = { workspace = true }
 td-tower = { workspace = true }
 
 # External dependencies
 
 sqlx = { workspace = true }
+tokio = { workspace = true }
+tower = { workspace = true }
 
 [dev-dependencies]
 td-objects = { workspace = true, features = ["td-test"] }
