[TD-70] Read Role service (#55)

--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -45,8 +45,10 @@ td-error = { workspace = true }
 
 ## Libraries
 
+td-common = { workspace = true }
 td-database = { workspace = true }
 td-objects = { workspace = true }
+td-security = { workspace = true }
 td-tower = { workspace = true }
 
 # External dependencies
