--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pillow==11.1.0
 polars==1.23.0
 PyYAML==6.0.2
 pyarrow==19.0.1
+pyiceberg==0.8.1
 pywin32==308; platform_system == "Windows"
 requests==2.32.3
 rich==13.9.4
