--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -29,7 +29,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "td-schema", "thiserror", "toml", "regex", "lazy_static"]
+ignored = ["openssl", "td-build", "td-objects", "td-schema", "thiserror", "toml"]
 
 # Build dependencies
 
@@ -60,6 +60,7 @@ td-transaction = { workspace = true }
 
 # External dependencies
 
+async-trait = { workspace = true }
 axum = { workspace = true }
 bytes = { workspace = true }
 constcat = { workspace = true }
@@ -84,6 +85,7 @@ tracing = { workspace = true }
 
 [dev-dependencies]
 td-database = { workspace = true, features = ["td-test"] }
+td-objects = { workspace = true, features = ["td-test"] }
 td-schema = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
