[TD-77] Permissions CDL services and endpoints (#67)
Permissions CRDL services

changes to make it work

endpoints

--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -51,6 +51,7 @@ td-tower = { workspace = true }
 
 # External dependencies
 
+async-trait = { workspace = true }
 tokio = { workspace = true }
 tower = { workspace = true }
 
